added highlights, service, and students web sites

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,19 +2,17 @@
   <div class="panel-footer">
 	<div class="container-fluid">
 	  <div class="row">
-		<div class="col-sm-4">
-			
-		  <p>&copy 2018 SERG. Site made with <a href="https://jekyllrb.com">Jekyll</a></p>
-          <p>We are part of the <a href="https://www.aau.at/en/isys/">Department of Informatics Systems</a> at <a href="http://www.aau.at/">Alpen-Adria-Universität Klagenfurt</a>.</p>
+		<div class="col-sm-5">			
+		  &copy 2018 Martin Pinzger. Site made with <a href="https://jekyllrb.com">Jekyll</a>
 		</div>
+		<!--
 		<div class="col-sm-4">
 		  Contact:<br />
 		  Alpen-Adria-Universität Klagenfurt<br />
 		  Universitätsstraße 65-67<br />
-		  9020 Klagenfurt<br />
-		  Austria <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+		  9020 Klagenfurt, Austria (<a href="https://goo.gl/maps/H2RjutkyoUH2">map</a>
 		</div>
+		-->
 	  </div>
 	</div>
   </div>
