--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,16 +8,16 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">SERG @ Alpen-Adria-Universität Klagenfurt</a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Martin Pinzger @ SERG</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-<!--		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li> -->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Teaching</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/service">Service</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/students">Students</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/highlights">Highlights</a></li>
 	  </ul>
 	</div>
   </div>
