added wanted page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="col-sm-5">			
-		  &copy 2018 Martin Pinzger. Site made with <a href="https://jekyllrb.com">Jekyll</a>
+		  &copy 2018 by Martin Pinzger
 		</div>
 		<!--
 		<div class="col-sm-4">
