--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,11 +12,12 @@
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
+<!--		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li> -->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Teaching</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/service">Service</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/students">Students</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/wanted">Wanted</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/service">Service</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/highlights">Highlights</a></li>
 	  </ul>
 	</div>
