modified footer styel, added missing publications, added pics for recent publications

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,7 @@
-<div id="footer" class="panel">
-  <div class="panel-footer">
-	<div class="container-fluid">
-	  <div class="row">
-		<div class="col-sm-5">			
+<div id="footer" class="panel panel-custom">
+  <div class="panel-footer panel-custom">
+	<div class="container-fluid container-custom">
 		  &copy 2018 by Martin Pinzger
-		</div>
 		<!--
 		<div class="col-sm-4">
 		  Contact:<br />
@@ -13,7 +10,6 @@
 		  9020 Klagenfurt, Austria (<a href="https://goo.gl/maps/H2RjutkyoUH2">map</a>
 		</div>
 		-->
-	  </div>
 	</div>
   </div>
 </div>
