added personal info page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/wanted">Wanted</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/service">Service</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/highlights">Highlights</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/personalinfo">Personal Info</a></li>		
 	  </ul>
 	</div>
   </div>
