--- a/_includes/news.html
+++ b/_includes/news.html
@@ -2,11 +2,10 @@
 <div class="well">
 <h4>News</h4>
 
-{% for article in site.data.news limit:9 %}
+{% for article in site.data.news limit:5 %}
 {{ article.date }}
-<p><em>{{ article.headline }}</em></p>
+<p>{{ article.headline }}</p>
 {% endfor %}
 
 <h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
-    
-    </div>
+</div>
