--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -7,4 +7,5 @@ layout: default
   </div>
   <div id="newsid" class="col-sm-4" >
 	{% include news.html %}
+	{% include conferences.html %}
   </div>
