updated publications, news, and services

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="footer" class="panel panel-custom">
   <div class="panel-footer panel-custom">
 	<div class="container-fluid container-custom">
-		  &copy 2018 by Martin Pinzger
+		  &copy 2018-{{ site.time | date: '%Y' }} by Martin Pinzger
 		<!--
 		<div class="col-sm-4">
 		  Contact:<br />
