--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,9 +2,7 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://saner2019.github.io/">SANER 2019</a> <br/>
-<a href="https://2019.icse-conferences.org/">ICSE 2019</a> <br/>
-<a href="https://2019.msrconf.org/">MSR 2019</a> <br/>
 <a href="http://esec-fse19.ut.ee/">ESEC/FSE 2019</a>
-
+<a href="https://icsme2019.github.io/">ICSME 2019</a>
+<a href="http://se20.ocg.at/">SE 2020</a>
 </div>
