--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,7 +2,8 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="http://esec-fse19.ut.ee/">ESEC/FSE 2019</a>
-<a href="https://icsme2019.github.io/">ICSME 2019</a>
+<a href="http://esec-fse19.ut.ee/">ESEC/FSE 2019</a> <br/>
+<a href="https://icsme2019.github.io/">ICSME 2019</a> <br/>
 <a href="http://se20.ocg.at/">SE 2020</a>
+
 </div>
