added MSR 2020 and SANER 2020

--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -5,6 +5,7 @@
 <a href="http://esec-fse19.ut.ee/">ESEC/FSE 2019</a> <br/>
 <a href="https://icsme2019.github.io/">ICSME 2019</a> <br/>
 <a href="http://se20.ocg.at/">SE 2020</a> <br/>
-<a href="https://saner2020.csd.uwo.ca/">SANER 2020</a>
+<a href="https://saner2020.csd.uwo.ca/">SANER 2020</a> <br/>
+<a href="http://2020.msrconf.org/">MSR 2020</a>
 
 </div>
