added ERRoSS and Giovanni's paper

--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -7,5 +7,6 @@
 <a href="http://se20.ocg.at/">SE 2020</a> <br/>
 <a href="https://saner2020.csd.uwo.ca/">SANER 2020</a> <br/>
 <a href="http://2020.msrconf.org/">MSR 2020</a>
+<a href="https://www.erross.org/">ERRoSS 2020</a> <br/>
 
 </div>
