--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,11 +2,11 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="http://esec-fse19.ut.ee/">ESEC/FSE 2019</a> <br/>
-<a href="https://icsme2019.github.io/">ICSME 2019</a> <br/>
 <a href="http://se20.ocg.at/">SE 2020</a> <br/>
 <a href="https://saner2020.csd.uwo.ca/">SANER 2020</a> <br/>
+<a href="http://vst2020.scch.at/">VST 2020</a>  <br/>
+<a href="https://www.erross.org/">ERRoSS 2020</a>  <br/>
 <a href="http://2020.msrconf.org/">MSR 2020</a> <br/>
-<a href="https://www.erross.org/">ERRoSS 2020</a> 
+<a href="https://conf.researchr.org/home/icse-2020">ICSE 2020</a> <br/>
 
 </div>
