--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -6,6 +6,7 @@
 <a href="http://2020.msrconf.org/">MSR 2020</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2020">ICSE 2020</a> <br/>
 <a href="https://icsme2020.github.io/">ICSME 2020</a> <br/>
+<a href="https://www.software-quality-days.com/en/">SWQD 2021</a> <br />
 <a href="https://conf.researchr.org/home/icse-2021">ICSE 2021</a> <br/>
 
 </div>
