--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -3,10 +3,9 @@
 <h4>Upcoming Conferences</h4>
 
 <a href="https://www.erross.org/">ERRoSS 2020</a>  <br/>
-<a href="http://2020.msrconf.org/">MSR 2020</a> <br/>
-<a href="https://conf.researchr.org/home/icse-2020">ICSE 2020</a> <br/>
 <a href="https://icsme2020.github.io/">ICSME 2020</a> <br/>
-<a href="https://www.software-quality-days.com/en/">SWQD 2021</a> <br />
+<a href="https://www.software-quality-days.com/en/">SWQD 2021</a> <br/>
+<a href="https://saner2021.shidler.hawaii.edu/">SANER 2021</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2021">ICSE 2021</a> <br/>
 
 </div>
