--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -3,9 +3,10 @@
 <h4>Upcoming Conferences</h4>
 
 <a href="https://www.erross.org/">ERRoSS 2020</a>  <br/>
-<a href="https://icsme2020.github.io/">ICSME 2020</a> <br/>
 <a href="https://www.software-quality-days.com/en/">SWQD 2021</a> <br/>
+<a href="https://se-2021.tu-bs.de/">SE 2021</a> <br/>
 <a href="https://saner2021.shidler.hawaii.edu/">SANER 2021</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2021">ICSE 2021</a> <br/>
+<a href="https://2021.esec-fse.org/">ESEC/FSE 2021</a> <br/>
 
 </div>
