--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -5,6 +5,7 @@
 <a href="https://www.erross.org/">ERRoSS 2020</a>  <br/>
 <a href="https://www.software-quality-days.com/en/">SWQD 2021</a> <br/>
 <a href="https://se-2021.tu-bs.de/">SE 2021</a> <br/>
+<a href="https://vst2021.scch.at/">VST 2021</a>  <br/>
 <a href="https://saner2021.shidler.hawaii.edu/">SANER 2021</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2021">ICSE 2021</a> <br/>
 <a href="https://2021.esec-fse.org/">ESEC/FSE 2021</a> <br/>
