added job offer and vissoft 2021

--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -6,6 +6,8 @@
 <a href="https://se-2021.tu-bs.de/">SE 2021</a> <br/>
 <a href="https://vst2021.scch.at/">VST 2021</a>  <br/>
 <a href="https://saner2021.shidler.hawaii.edu/">SANER 2021</a> <br/>
+<a href="https://vissoft.info/2021/">VISSOFT 2021</a> <br/>
+<a href="https://icsme2021.github.io/">ICSME 2021</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2021">ICSE 2021</a> <br/>
 <a href="https://2021.esec-fse.org/">ESEC/FSE 2021</a> <br/>
 
