--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,13 +2,11 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://www.software-quality-days.com/en/">SWQD 2021</a> <br/>
-<a href="https://se-2021.tu-bs.de/">SE 2021</a> <br/>
-<a href="https://vst2021.scch.at/">VST 2021</a>  <br/>
-<a href="https://saner2021.shidler.hawaii.edu/">SANER 2021</a> <br/>
 <a href="https://vissoft.info/2021/">VISSOFT 2021</a> <br/>
 <a href="https://icsme2021.github.io/">ICSME 2021</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2021">ICSE 2021</a> <br/>
+<a href="https://conf.researchr.org/home/msr-2021">MSR 2021</a> <br/>
+<a href="https://conf.researchr.org/home/icpc-2021">ICPC 2021</a> <br/>
 <a href="https://2021.esec-fse.org/">ESEC/FSE 2021</a> <br/>
 
 </div>
