--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,11 +2,12 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://vissoft.info/2021/">VISSOFT 2021</a> <br/>
 <a href="https://icsme2021.github.io/">ICSME 2021</a> <br/>
-<a href="https://conf.researchr.org/home/icse-2021">ICSE 2021</a> <br/>
-<a href="https://conf.researchr.org/home/msr-2021">MSR 2021</a> <br/>
-<a href="https://conf.researchr.org/home/icpc-2021">ICPC 2021</a> <br/>
-<a href="https://2021.esec-fse.org/">ESEC/FSE 2021</a> <br/>
+<a href="https://vissoft.info/2021/">VISSOFT 2021</a> <br/>
+<a href="https://saner2022.uom.gr/">SANER 2022</a> <br/>
+<a href="https://conf.researchr.org/home/icse-2022">ICSE 2022</a> <br/>
+<a href="https://conf.researchr.org/home/msr-2022">MSR 2022</a> <br/>
+<a href="https://conf.researchr.org/home/icpc-2022">ICPC 2022</a> <br/>
+<a href="https://2022.esec-fse.org/">ESEC/FSE 2022</a> <br/>
 
 </div>
