--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,8 +2,7 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://icsme2021.github.io/">ICSME 2021</a> <br/>
-<a href="https://vissoft.info/2021/">VISSOFT 2021</a> <br/>
+<a href="https://vst2022.scch.at/">VST 2022</a> <br/>
 <a href="https://saner2022.uom.gr/">SANER 2022</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2022">ICSE 2022</a> <br/>
 <a href="https://conf.researchr.org/home/msr-2022">MSR 2022</a> <br/>
