--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,10 +2,13 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://conf.researchr.org/home/icse-2022">ICSE 2022</a> <br/>
-<a href="https://conf.researchr.org/home/msr-2022">MSR 2022</a> <br/>
-<a href="https://conf.researchr.org/home/icpc-2022">ICPC 2022</a> <br/>
+<a href="https://cyprusconferences.org/icsme2022/">ICSME 2022</a> <br/>
+<a href="https://conf.researchr.org/home/ase-2022">ASE 2022</a> <br/>
 <a href="https://2022.esec-fse.org/">ESEC/FSE 2022</a> <br/>
+<a href="https://saner2023.must.edu.mo/">SANER 2023</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2023">ICSE 2023</a> <br/>
+<a href="https://conf.researchr.org/home/msr-2023">MSR 2023</a> <br/>
+<a href="https://conf.researchr.org/home/icpc-2023">ICPC 2023</a> <br/>
+<a href="https://2023.esec-fse.org/">ESEC/FSE 2023</a> <br/>
 
 </div>
