--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -6,6 +6,7 @@
 <a href="https://conf.researchr.org/home/icse-2023">ICSE 2023</a> <br/>
 <a href="https://conf.researchr.org/home/msr-2023">MSR 2023</a> <br/>
 <a href="https://conf.researchr.org/home/icpc-2023">ICPC 2023</a> <br/>
+<a href="https://conf.researchr.org/home/icsme-2023">ICSME 2023</a> <br/>
 <a href="https://2023.esec-fse.org/">ESEC/FSE 2023</a> <br/>
 
 </div>
