--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,11 +2,12 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://saner2023.must.edu.mo/">SANER 2023</a> <br/>
-<a href="https://conf.researchr.org/home/icse-2023">ICSE 2023</a> <br/>
-<a href="https://conf.researchr.org/home/msr-2023">MSR 2023</a> <br/>
-<a href="https://conf.researchr.org/home/icpc-2023">ICPC 2023</a> <br/>
-<a href="https://conf.researchr.org/home/icsme-2023">ICSME 2023</a> <br/>
-<a href="https://2023.esec-fse.org/">ESEC/FSE 2023</a> <br/>
+<a href="https://conf.researchr.org/home/fse-2023">ESEC/FSE 2023</a> <br/>
+<a href="https://conf.researchr.org/home/saner-2024">SANER 2024</a> <br/>
+<a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a> <br/>
+<a href="https://conf.researchr.org/home/msr-2024">MSR 2024</a> <br/>
+<a href="https://conf.researchr.org/home/icpc-2024">ICPC 2024</a> <br/>
+<a href="https://conf.researchr.org/home/icsme-2024">ICSME 2024</a> <br/>
+<a href="https://conf.researchr.org/home/fse-2024/">ESEC/FSE 2024</a> <br/>
 
 </div>
