added recent PCs

--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,12 +2,11 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://conf.researchr.org/home/fse-2023">ESEC/FSE 2023</a> <br/>
-<a href="https://conf.researchr.org/home/saner-2024">SANER 2024</a> <br/>
-<a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a> <br/>
-<a href="https://conf.researchr.org/home/msr-2024">MSR 2024</a> <br/>
-<a href="https://conf.researchr.org/home/icpc-2024">ICPC 2024</a> <br/>
 <a href="https://conf.researchr.org/home/icsme-2024">ICSME 2024</a> <br/>
-<a href="https://conf.researchr.org/home/fse-2024/">ESEC/FSE 2024</a> <br/>
+<a href="https://conf.researchr.org/home/ase-2024">ASE 2024</a> <br/>
+<a href="https://conf.researchr.org/home/fse-2025/">FSE 2025</a> <br/>
+<a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a> <br/>
+<a href="https://conf.researchr.org/home/icse-2025">ICSE 2025</a> <br/>
+<a href="https://conf.researchr.org/home/msr-2025">MSR 2025</a> <br/>
 
 </div>
