updated few things

--- a/_includes/conferences.html
+++ b/_includes/conferences.html
@@ -2,11 +2,12 @@
 <div class="well">
 <h4>Upcoming Conferences</h4>
 
-<a href="https://conf.researchr.org/home/icsme-2025">ICSME 2025</a> <br/>
-<a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a> <br/>
 <a href="https://conf.researchr.org/home/fse-2026/">FSE 2026</a> <br/>
 <a href="https://conf.researchr.org/home/saner-2026">SANER 2026</a> <br/>
 <a href="https://conf.researchr.org/home/icse-2026">ICSE 2026</a> <br/>
 <a href="https://conf.researchr.org/home/msr-2026">MSR 2026</a> <br/>
+<a href="https://conf.researchr.org/home/icsme-2026">ICSME 2026</a> <br/>
+<a href="https://conf.researchr.org/home/ase-2026">ASE 2026</a> <br/>
+<a href="https://conf.researchr.org/home/icse-2027">ICSE 2027</a> <br/>
 
 </div>
